--- a/VC1/01-HTML/Unsolved/index.html
+++ b/VC1/01-HTML/Unsolved/index.html
@@ -7,13 +7,18 @@
   </head>
 
   <body>
-    <!-- AC01: When the main header reads "Student Bio".-->
+    <!-- AC04: When the finished page matches the mockup.-->
+    
+    <!-- AC01: Then the main header reads "Student Bio".-->
     <header><h1>Student Bio</h1></header>
 
-    <!-- AC02: when there is a section that includes a name, an image, and a paragraph.-->
+    <!-- AC02: Then there is a section that includes a name, an image, and a paragraph.-->
     <section>
+      <!-- Name-->
       <h2>Lucas Zimmerman</h2>
+      <!-- Image-->
       <img src="https://via.placeholder.com/200" alt="My Bio Pic"/>
+      <!-- Paragraph-->
       <p>I am a Software Developer Engineer in Test.<br> 
         I joined this class to upgrade my knowledge with<br> 
         the current resources for Web Development. I hope<br>
@@ -31,10 +36,12 @@
     <!--AC03: It's done when there is a second section that includes a subheader labeled 
       "Contact Info" and a list that includes links to my email, GitHub, and portfolio.-->
     <section>
+      <!-- Subheader-->
       <h2>Contact Info</h2>
+      <!-- Links-->
       <ul>
         <li><strong>Email: <a href = "mailto: zimmerman.lucas@hotmail.com">zimmerman.lucas@hotmail.com</a></strong></li>
-        <li><strong>Github: <a  href = "https://github.com/dolomiteson/BootCamp.git" style="color: blue">dolomiteson</a></strong></li>
+        <li><strong>Github: <a  href = "https://github.com/dolomiteson" style="color: blue">dolomiteson</a></strong></li>
         <li><strong>Portfolio: <a href = "" style="color: blue">coming soon</a></strong></li>
       </ul>
     </section>
