--- a/VC1/02-Attributes/Unsolved/index_noImage.html
+++ b/VC1/02-Attributes/Unsolved/index_noImage.html
@@ -18,8 +18,8 @@
     <!-- Then a user opens the page, each section should have a background color applied.-->
     <section class="section">
       <h2>Lucas Zimmerman</h2>
-      <!-- Image Present: Then a user opens the page, an image should appear, and `alt` text describing the image should be provided.-->
-      <img src="assets\images\image-1.jpg" alt="My Bio Pic"/>
+      <!-- Alt Present: Then a user opens the page, an image should appear, and `alt` text describing the image should be provided.-->
+      <img src="\assets\images\image-1.jpg" alt="My Bio Pic"/>
 
       <p>I am a Software Developer Engineer in Test.<br> 
         I joined this class to upgrade my knowledge with<br> 
