--- a/MOD1-Challenge/Develop/index.html
+++ b/MOD1-Challenge/Develop/index.html
@@ -10,7 +10,7 @@
     <body>
         
         <header class="header">
-            <h1>Horiseon</h1>
+            <h1>Hori<span>seo</span>n</h1>
             <nav>
                 <ul>
                     <li>
